--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/crypto-js": "^4.2.2",
     "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.77.4",
     "svelte": "^4.2.12",
     "svelte-check": "^3.6.7",
     "tslib": "^2.6.2",
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "@xpbox/sdk": "^0.0.1",
+    "crypto-js": "^4.2.0",
     "js-base64": "^3.7.7"
   }
 }
