--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@xpbox/sdk": "^0.0.1",
+    "copy-to-clipboard": "^3.3.3",
     "crypto-js": "^4.2.0",
     "js-base64": "^3.7.7"
   }
